// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PoliticianDetail /> Details renders gender Female 1`] = `
<div
  style={
    Object {
      "marginLeft": 24,
      "marginTop": 48,
    }
  }
>
  <h2>
    undefined (Metal)
  </h2>
  <li
    className="MuiListItem-root-1 MuiListItem-gutters-8 MuiListItem-default-4"
    disabled={false}
  >
    <div
      style={
        Object {
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <img
          className="politician-picture"
          src="https://rock.com/me.png"
        />
      </div>
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <p>
          Sexo: 
          Feminino
        </p>
        <p>
          Partido: 
          rock
        </p>
        <p>
          Estado civil: 
          single
        </p>
        <p>
          Ocupação: 
          Developer
        </p>
        <p>
          Escolaridade: 
          rock
        </p>
        <p>
          Data de nascimento: 
          1800-01-01
        </p>
        <p>
          Nacionalidade: 
          rock
        </p>
        <p>
          Naturalidade: 
          heavy metal/rock
        </p>
        <p>
          Nomes Alternativos: 
        </p>
        <p>
          Cor/Raça: 
          rock
        </p>
        <p>
          Email: 
          rock@rock.com
        </p>
        <p>
          Website: 
          https://rock.com
        </p>
      </div>
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <div>
          <h3
            className="panel-title"
          >
            Candidaturas
          </h3>
          <div
            className="panel-body"
          />
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`<PoliticianDetail /> Details renders politician name without alternative names 1`] = `
<div
  style={
    Object {
      "marginLeft": 24,
      "marginTop": 48,
    }
  }
>
  <h2>
    Metal
  </h2>
  <li
    className="MuiListItem-root-1 MuiListItem-gutters-8 MuiListItem-default-4"
    disabled={false}
  >
    <div
      style={
        Object {
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <img
          className="politician-picture"
          src="https://rock.com/me.png"
        />
      </div>
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <p>
          Sexo: 
          Masculino
        </p>
        <p>
          Partido: 
          rock
        </p>
        <p>
          Estado civil: 
          single
        </p>
        <p>
          Ocupação: 
          Developer
        </p>
        <p>
          Escolaridade: 
          rock
        </p>
        <p>
          Data de nascimento: 
          1800-01-01
        </p>
        <p>
          Nacionalidade: 
          rock
        </p>
        <p>
          Naturalidade: 
          heavy metal/rock
        </p>
        <p>
          Nomes Alternativos: 
        </p>
        <p>
          Cor/Raça: 
          rock
        </p>
        <p>
          Email: 
          rock@rock.com
        </p>
        <p>
          Website: 
          https://rock.com
        </p>
      </div>
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <div>
          <h3
            className="panel-title"
          >
            Candidaturas
          </h3>
          <div
            className="panel-body"
          />
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`<PoliticianDetail /> Details renders politician name without ethnicity 1`] = `
<div
  style={
    Object {
      "marginLeft": 24,
      "marginTop": 48,
    }
  }
>
  <h2>
    undefined (Metal)
  </h2>
  <li
    className="MuiListItem-root-1 MuiListItem-gutters-8 MuiListItem-default-4"
    disabled={false}
  >
    <div
      style={
        Object {
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <img
          className="politician-picture"
          src="https://rock.com/me.png"
        />
      </div>
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <p>
          Sexo: 
          Masculino
        </p>
        <p>
          Partido: 
          rock
        </p>
        <p>
          Estado civil: 
          single
        </p>
        <p>
          Ocupação: 
          Developer
        </p>
        <p>
          Escolaridade: 
          rock
        </p>
        <p>
          Data de nascimento: 
          1800-01-01
        </p>
        <p>
          Nacionalidade: 
          rock
        </p>
        <p>
          Naturalidade: 
          heavy metal/rock
        </p>
        <p>
          Nomes Alternativos: 
        </p>
        <p>
          Cor/Raça: 
          
        </p>
        <p>
          Email: 
          rock@rock.com
        </p>
        <p>
          Website: 
          https://rock.com
        </p>
      </div>
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <div>
          <h3
            className="panel-title"
          >
            Candidaturas
          </h3>
          <div
            className="panel-body"
          />
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`<PoliticianDetail /> Details renders politician name without state 1`] = `
<div
  style={
    Object {
      "marginLeft": 24,
      "marginTop": 48,
    }
  }
>
  <h2>
    undefined (Metal)
  </h2>
  <li
    className="MuiListItem-root-1 MuiListItem-gutters-8 MuiListItem-default-4"
    disabled={false}
  >
    <div
      style={
        Object {
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <img
          className="politician-picture"
          src="https://rock.com/me.png"
        />
      </div>
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <p>
          Sexo: 
          Masculino
        </p>
        <p>
          Partido: 
          rock
        </p>
        <p>
          Estado civil: 
          single
        </p>
        <p>
          Ocupação: 
          Developer
        </p>
        <p>
          Escolaridade: 
          rock
        </p>
        <p>
          Data de nascimento: 
          1800-01-01
        </p>
        <p>
          Nacionalidade: 
          rock
        </p>
        <p>
          Naturalidade: 
          heavy metal
        </p>
        <p>
          Nomes Alternativos: 
        </p>
        <p>
          Cor/Raça: 
          rock
        </p>
        <p>
          Email: 
          rock@rock.com
        </p>
        <p>
          Website: 
          https://rock.com
        </p>
      </div>
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <div>
          <h3
            className="panel-title"
          >
            Candidaturas
          </h3>
          <div
            className="panel-body"
          />
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`<PoliticianDetail /> renders <Loading /> when there is no data 1`] = `
<div>
  Loading...
</div>
`;

exports[`<PoliticianDetail /> renders without crashing 1`] = `
<div
  style={
    Object {
      "marginLeft": 24,
      "marginTop": 48,
    }
  }
>
  <h2>
    undefined (Metal)
  </h2>
  <li
    className="MuiListItem-root-1 MuiListItem-gutters-8 MuiListItem-default-4"
    disabled={false}
  >
    <div
      style={
        Object {
          "display": "flex",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <img
          className="politician-picture"
          src="https://rock.com/me.png"
        />
      </div>
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <p>
          Sexo: 
          Masculino
        </p>
        <p>
          Partido: 
          rock
        </p>
        <p>
          Estado civil: 
          single
        </p>
        <p>
          Ocupação: 
          Developer
        </p>
        <p>
          Escolaridade: 
          rock
        </p>
        <p>
          Data de nascimento: 
          1800-01-01
        </p>
        <p>
          Nacionalidade: 
          rock
        </p>
        <p>
          Naturalidade: 
          heavy metal/rock
        </p>
        <p>
          Nomes Alternativos: 
        </p>
        <p>
          Cor/Raça: 
          rock
        </p>
        <p>
          Email: 
          rock@rock.com
        </p>
        <p>
          Website: 
          https://rock.com
        </p>
      </div>
      <div
        style={
          Object {
            "flexGrow": 1,
            "width": "33%",
          }
        }
      >
        <div>
          <h3
            className="panel-title"
          >
            Candidaturas
          </h3>
          <div
            className="panel-body"
          />
        </div>
      </div>
    </div>
  </li>
</div>
`;
